--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,36 @@
 .main-header .showcase {
   padding-top: 100px;
 }
+
+.section-developers {
+  background: url(../img/code.jpg);
+  background-size: cover;
+  background-position: center;
+  border-top: #d847f1 solid 5px;
+  border-bottom: #d847f1 solid 5px;
+  min-height: 180px;
+  position: relative;
+}
+
+.section-podcast {
+  background: url(../img/circuit.jpg);
+  background-size: cover;
+  background-position: center;
+  border-top: #d847f1 solid 5px;
+  border-bottom: #d847f1 solid 5px;
+  min-height: 180px;
+  position: relative;
+}
+
+.primary-overlay {
+  background: rgba(112, 81, 176, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+}
+
+.section-podcast .podcast-btn {
+  margin-top: 30px;
+}
