Added section: Testimonial, footer, and solutions page

--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,16 @@
 .section-podcast .podcast-btn {
   margin-top: 30px;
 }
+
+.main-header-inner {
+  background: url(../img/background.jpg);
+  min-height: 350px;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  
+}
+
+.main-header-inner .showcase {
+  padding-top: 50px;
+}
